# flux-rest-server

./: .gitignore  Makefile.am  README.md  REST_API.md  autogen.sh  configure.ac
config/: ax_flux_core.m4
debian/: README.Debian  control  copyright  postinst  rules
nginx/: flux-rest-server-insecure.conf.example  flux-rest-server-proxy.conf.example  flux-rest-server.conf.example
polkit/: 50-flux-rest-server.rules.in
scripts/: debbuild.sh  install-deps-deb.sh
src/cmd/: flux-rest-server.py
src/libexec/: flux-rest-server-ensure.py
systemd/: flux-rest-server-ensure.service.in  flux-rest-server-ensure.socket.in  flux-rest-server@.service.in  flux-rest-server@.socket.in
t/: Makefile.am  t0000-sharness.t  t1000-basic.t  t1001-security.t
t/sharness.d/: 10-sudo.sh  flux-sharness.sh
